Proposed fix for Bug#4026 "Microseconds part of TIME/DATETIME types is broken (prepared statements)": fixed date handling in many places of prepared statements code.